--- a/style.css
+++ b/style.css
@@ -32,9 +32,14 @@ nav a{
   padding: 30px;
 }
 
-nav a:hover{
+nav a:not(:focus):hover{
   background-color: #333;
   transition: 0.5s;
+}
+
+nav a:focus{
+  background-color: white;
+  color: black;
 }
 
 .content{
