--- a/style.css
+++ b/style.css
@@ -3,14 +3,11 @@ body, html{
 }
 
 body{
-  /*background-image: url("images/image.jpeg");*/
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100%;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav{
@@ -42,78 +39,20 @@ nav a:focus{
   color: black;
 }
 
-.content{
-  margin-left: 2vw;
+.picture{
+  margin-left: 40vw;
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
 }
 
-.part1 {
-  width:48%;
-  height: 50%;
-  float: left;
+.line{
   text-align: center;
-  border-right: 1px solid;
-  border-bottom: 1px solid;
-}
-
-.part1:hover{
-  background-image: url("images/pj1.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  text-align: left;
-  color: white;
-  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-}
-
-.part1:hover a{
-  color: #64b5f6;
-}
-
-.part1:hover p{
-  color: white;
-  margin-left: 2vw;
-}
-
-.part2 {
-  width:48%;
-  height: 50%;
-  float: left;
-  text-align: center;
-  border-bottom: 1px solid;
-}
-
-.part2:hover{
-  background-image: url("images/pj2.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  text-align: left;
-  color: #ff8a80;
-}
-
-.part2:hover a{
-  color: #64b5f6;
-}
-
-.part2:hover p{
-  margin-left: 1vw;
-  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-}
-
-.part3 {
-    width:48%;
-    height: 50%;
-    float: left;
-    text-align: center;
-    border-right: 1px solid;
-}
-.part4 {
-    width:48%;
-    height: 50%;
-    float: left;
-    text-align: center;
+  margin-bottom: 10vh;
 }
 
 .content{
-  height: 80vh;
+  margin-left: 2vw;
 }
 
 .pages h2{
@@ -133,34 +72,109 @@ nav a:focus{
   color: black;
 }
 
-.picture{
-  margin-left: 40vw;
-  border-radius: 50%;
-  height: 200px;
-  width: 200px;
-}
-
-.line{
-  text-align: center;
-  margin-bottom: 10vh;
-}
-
 .info {
   text-align: center;
+  padding: 10px;
 }
 
-#connect .email{
-  margin-left: 5vw;
+.title{
+  color: red;
+  font-size: 28px;
+  font-weight: bold;
+  font-variant: small-caps;
+  text-decoration: underline;
 }
 
-#connect .phone {
+.project1{
+  display: flex;
+  flex-direction: row;
+  height: 90vh;
+}
+
+.hang, .hang-code, .amazon, .amazon-code{
+  border: none;
+  overflow: hidden;
+  padding: 0;
+  width: 150px;
+  height: 40px;
+  color: white;
+}
+
+.hang{
+  background-color: #3d5afe;
+}
+
+.hang-code{
+  border-radius: 10em;
+  background-color: #f50057;
+}
+
+.pj1{
+  height: 400px;
+  width: 600px;
+}
+
+.info1 p{
+  margin-left: 20vw;
+}
+
+.project2{
+  display: flex;
+  flex-direction: row;
+  height: 90vh;
+}
+
+.amazon{
+  background-color: #ff8f00;
+}
+
+.amazon-code{
+  border-radius: 10em;
+  background-color: #4caf50;
+}
+
+.pj2{
+  height: 400px;
+  width: 600px;
   margin-left: 10vw;
 }
 
-#connect .link{
-  margin-left: 15vw;
+.con-icons{
+  padding: 10px;
+  display: block;
 }
 
-#connect .resume{
-  margin-left: 30vw;
+.icons{
+  float: left;
+  margin: 25vh 0 0 11vw;
+}
+
+.e-icon, .link-icon, .git-icon, .res-icon, .phone-icon{
+  display: block;
+  text-align: center;
+}
+
+.e-text, .link-text, .git-text, .res-text, .phone-text{
+  display: block;
+  text-align: center;
+}
+
+.link{
+  color: rgb(17, 120, 178);
+}
+
+.git{
+  color: black;
+}
+
+.email{
+  color: rgb(96, 29, 206)
+}
+
+.resume{
+  color: orange;
+}
+
+.phone-icon{
+  color: green;
 }
