--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body, html{
   margin: 0;
+  width: 100%;
 }
 
 body{
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   height: 100%;
   font-family: 'Roboto', sans-serif;
@@ -30,30 +29,26 @@ nav a{
   padding: 30px;
 }
 
+/* hovering oversection of nav bar that is NOT clicked on*/
 nav a:not(:focus):hover{
   background-color: #333;
   transition: 0.5s;
 }
 
+/* when you click on a section of the nav bar*/
 nav a:focus{
   background-color: white;
   color: black;
 }
 
+.pic{
+  text-align: center;
+}
+
+/* for the picture of myself*/
 .picture{
-  margin-left: 40vw;
-  border-radius: 50%;
   height: 200px;
   width: 200px;
-}
-
-.line{
-  text-align: center;
-  margin-bottom: 10vh;
-}
-
-.content{
-  margin-left: 2vw;
 }
 
 .pages h2{
@@ -62,22 +57,41 @@ nav a:focus{
   margin-left: 3vw;
 }
 
+/* for everything but the nav bar*/
 .pages{
   padding: 10vh 0vh;
   min-height: 80vh;
   width: 100vw;
 }
 
-.active{
-  background-color: white;
-  color: black;
-}
-
+/*applies to line and brand*/
 .info {
   text-align: center;
   padding: 10px;
 }
 
+.line{
+  text-align: center;
+  margin-bottom: 5vh;
+}
+
+/* for my brand statement*/
+.brand{
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 300px;
+  margin-top: 10vh;
+}
+
+/*for everything in the portfolio section*/
+.content{
+  margin-left: 2vw;
+}
+
+/*applies to the titles of the project*/
 .title{
   color: red;
   font-size: 28px;
@@ -87,11 +101,11 @@ nav a:focus{
 }
 
 .project1{
-  display: flex;
-  flex-direction: row;
+  display: block;
   height: 90vh;
 }
 
+/*applies to every button*/
 button{
   cursor: pointer;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -99,7 +113,8 @@ button{
             0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
-.hang, .hang-code, .amazon, .amazon-code{
+/*more button styling*/
+.hang, .hang-code, .amazon, .amazon-code, .ididit, .front, .back{
   border: none;
   overflow: hidden;
   padding: 0;
@@ -126,19 +141,34 @@ button{
   background-color: #ff80ab;
 }
 
+/* applies to image of project 1 */
 .pj1{
   height: 400px;
-  width: 600px;
+  width: 48%;
+  float: left;
 }
 
-.info1 p{
-  margin-left: 20vw;
+.info1{
+  float: right;
+  width: 48%;
 }
 
 .project2{
-  display: flex;
-  flex-direction: row;
+  display: block;
   height: 90vh;
+}
+
+.info2{
+  float: left;
+  width: 50%;
+  margin-right: 2vw;
+}
+
+/* applies to image of project 2 */
+.pj2{
+  height: 400px;
+  width: 47%;
+  float: right;
 }
 
 .amazon{
@@ -158,10 +188,90 @@ button{
   background-color: #81c784;
 }
 
-.pj2{
+.project3{
+  display: block;
+  height: 90vh;
+}
+
+.pj3{
   height: 400px;
-  width: 600px;
-  margin-left: 10vw;
+  width: 48%;
+  float: left;
+}
+
+.info3{
+  float: right;
+  width: 48%;
+}
+
+.ididit{
+  background-color: #4caf50;
+}
+
+.ididit:hover{
+  background-color: #81c784;
+}
+
+.front{
+  background-color: #f44336;
+  border-radius: 10em;
+}
+
+.front:hover{
+  background-color: #e57373;
+}
+
+.back{
+  background-color: #fb8c00;
+  border-radius: 10em;
+}
+
+.back:hover{
+  background-color: #ffa726;
+}
+
+/* will adjust the layout of the portfolio section
+when the screen size is less than 500px  */
+@media screen
+  and (max-width: 600px){
+    .about{
+      width: 100%;
+    }
+    .content{
+      width:98%;
+      display: block;
+    }
+    .pj1{
+      width: 100%;
+    }
+    .info1{
+      width: 100%;
+      clear: both;
+      float: none;
+    }
+    .project2{
+      margin-top: 20vh;
+    }
+    .pj2{
+      width: 100%;
+    }
+    .info2{
+      width: 100%;
+      clear: both;
+      float: none;
+    }
+    .project3{
+      margin-top: 30vh;
+      height: 140vh;
+    }
+    .pj3{
+      width: 100%;
+    }
+    .info3{
+      width: 100%;
+      clear: both;
+      float: none;
+    }
 }
 
 .con-icons{
@@ -169,16 +279,19 @@ button{
   display: block;
 }
 
+/* styling for icons */
 .icons{
   float: left;
   margin: 25vh 0 0 11vw;
 }
 
+/* styling for icons */
 .e-icon, .link-icon, .git-icon, .res-icon, .phone-icon{
   display: block;
   text-align: center;
 }
 
+/* styling for text underneath icons */
 .e-text, .link-text, .git-text, .res-text, .phone-text{
   display: block;
   text-align: center;
