--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button{
 
 .info2{
   float: left;
-  width: 50%;
+  width: 47%;
   margin-right: 2vw;
 }
 
@@ -169,6 +169,7 @@ button{
   height: 400px;
   width: 47%;
   float: right;
+  margin-right: 2vw;
 }
 
 .amazon{
@@ -181,11 +182,11 @@ button{
 
 .amazon-code{
   border-radius: 10em;
-  background-color: #4caf50;
+  background-color: #212121;
 }
 
 .amazon-code:hover{
-  background-color: #81c784;
+  background-color: #616161;
 }
 
 .project3{
@@ -205,20 +206,20 @@ button{
 }
 
 .ididit{
-  background-color: #4caf50;
+  background-color: #f44336;
 }
 
 .ididit:hover{
-  background-color: #81c784;
+  background-color: #e57373;
 }
 
 .front{
-  background-color: #f44336;
+  background-color: #4caf50;
   border-radius: 10em;
 }
 
 .front:hover{
-  background-color: #e57373;
+  background-color: #81c784;
 }
 
 .back{
